test/integration/bad/tuples/incomplete2.stan
data { ( array [ foo ] real foo
